kustomize/traefik-stack/traefik/middleware-global02.yaml
# Middleware para timeouts longos
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: long-timeout
  namespace: traefik
spec:
  forwardAuth:
    address: "http://localhost"
    trustForwardHeader: true
