kustomize/traefik-stack/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`dashboard.vinicima.com`) || Host(`dashboard-k8s.vinicima.com`)
    kind: Rule
    services:
      - kind: TraefikService
        name: api@internal
    middlewares:
      - name: dashboard-auth
